--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -5,9 +5,9 @@ body {
   font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #484848;
-    position: relative;
-    display: flex;
-    flex-flow: column nowrap;
+  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 header, footer {
@@ -15,6 +15,8 @@ header, footer {
   display: flex;
   align-items: center;
   position: fixed;
+  z-index: 99999;
+  background-color: #FFFFFF;
 }
 
 
@@ -23,5 +25,6 @@ header, footer {
   top: 70px;
   max-width: 1000px;
   margin: 30px auto 30px auto;
+  margin-bottom: 120px;
   position: relative;
 }
